force-app/main/default/objects/Certifications_Licenses__c/Certifications_Licenses__c.object-meta.xml
<CustomObject>
    <description>Created by BDD</description>
    <label>Certification &amp; License</label>
    <nameField>
        <label>Certifications &amp; Licenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications &amp; Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>