force-app/main/default/objects/Certifications_Licenses__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Created by BDD</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certifications &amp; Licenses</relationshipLabel>
    <relationshipName>Certifications_Licenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>