force-app/main/default/objects/Certifications_Licenses__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Created by BDD</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>