force-app/main/default/objects/Certifications_Licenses__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Created by BDD</description>
    <formula>IF(TODAY() &gt;= Expiry_Date__c, IMAGE(&quot;/resource/icon_red_traffic&quot;, &quot;Expired&quot;, 16, 16),
IF(TODAY() &gt;= Expiry_Date__c-30, IMAGE(&quot;/resource/icon_amber_traffic&quot;, &quot;Expiry within 30 days&quot;, 16, 16),
IMAGE(&quot;/resource/icon_green_traffic&quot;, &quot;Active&quot;, 16, 16)
))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>