force-app/main/default/objects/Certifications_Licenses__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Created by BDD</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Certification_License_Type</valueSetName>
    </valueSet>
</CustomField>